# sps_framework

./: .gitignore  Dockerfile  README.md  changelog.txt  main.py  mkdocs.yml  pyproject.toml  run.bat  run.sh
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml
.github/workflows/: build-docs.yml  build.yml  docker-build.yml  test-docs.yml  test.yml
docs/: .pages  index.md
docs-resources/includes/: abbreviations.md
docs/Art/: [Art]-‐-Basic.md  [Art]-‐-Style-Guide:-Camp-Backgrounds.md  [Art]-‐-Style-Guide:-Clan-Symbols.md  [Art]-‐-Style-Guide:-Patrol-Sprites.md  basic.md  index.md
docs/Code/: basic.md  content-adding.md
docs/Project basics/: development-team-roles.md  getting-started-with-github-and-clangen.md
docs/Writing/: advanced-documentation.md  basic.md  leader-ceremonies.md  leaders-den-events.md  patrols.md  shortevents.md  thoughts.md
hooks/: lowercase_urls.py
resources/: clansettings.json  credits_text.json  game_config.json  gamesettings.json  placements.json  species.json
schemas/: common.schema.json  patrol.schema.json  shortevent.schema.json  thought.schema.json
scripts/: clan.py  conditions.py  debug_console.py  debug_menu.py  event_class.py  events.py  utility.py
tests/: test_cat.py  test_conditions.py  test_encoding.py  test_filter_patrol.py  test_freshkill.py  test_group_interaction.py  test_handle_short_events.py  test_interactions.py  test_json.py  test_json_schemas.py  test_lang.py  test_patrol_condition.py  test_pronouns.py  test_relation_events.py  test_romantic_events.py  test_save.py  test_thoughts.py  test_utility.py
(+622 files in other folders)
